--- a/index.html
+++ b/index.html
@@ -1,2 +1,113 @@
-hello
-kk
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title> My Document</title>
+<link rel="stylesheet" href="s.css">
+</head>
+<body class="top">
+<h2 class="smile1">ZODAIC SIGN</h2>
+
+<div class="smile5">
+  
+<p class="smile3">What are Zodaic Signs<span>?</span> 
+
+<div class="smile2">
+<div class="smile4">
+  <br>
+  <img src="images (6).jpeg" alt="my pic"  >
+  
+</div>
+
+     In astrology, a sign of the zodiac refers to one of 12 specific constellations of the zodiac that the sun passes through. A person's particular sign of the zodiac is the one that the sun was in when they were born. It is a belief in astrology that a person's personality can be predicted using their sign of the zodiac.
+<br>
+</p>
+</div>
+<div class="smile6">
+  <br>
+<h3>Types Of <span >Zodaic</span> Signs</h3>
+</div>
+<br>
+<div class="smile7">
+<img src="images (5).jpeg" alt="my lap top ">
+</div>
+
+<div class="chair1 ">
+
+  <p class="chair0"> They are 9 types of zodaic sign,namely:
+  <hr>
+  <br>
+  <br>
+
+  ◇Gemini
+  <br>
+  <br>
+  ◇Taurus
+  <br>
+  <br>
+  ◇Cancer
+  <br>
+  <br>
+  ◇Capricorn
+  <br>
+  <br>
+  ◇Libra
+  <br>
+  <br>
+  ◇Pisces
+  <br>
+  <br>
+  ◇Virgo
+  <br>
+  <br>
+  ◇Aquarius
+  <br>
+  <br>
+  ◇Aries
+  <br>
+  <br>
+  ◇Leo
+  <br>
+  <br>
+  ◇Sagittarius
+  <br>
+  <br>
+  ◇Scorpio
+  </p>
+</div>
+
+<div class="chair4">
+<img  src="images (12).jpeg" alt=" my picture">
+</div>
+<div class="fin2">
+<h5 class="fin1">Let's talk about Libra.</h5>
+<br>
+<p class="fin3">September 23 - October 22)
+Libra is an air sign represented by the scales (interestingly, the only inanimate object of the zodiac), an association that reflects Libra's fixation on balance and harmony. Libra is obsessed with symmetry and strives to create equilibrium in all areas of life. These air signs are the aesthetes of the zodiac: Ruled by Venus, the planet that governs love, beauty, and money, Libras adore high art, intellectualism, and connoisseurship. Suave Libras need to surround themselves with stunning objects and create environments that reflect their exquisite tastes. Accordingly, these air signs make excellent designers, decorators, art critics, and stylists</p>
+</div>
+<div class="pic1">
+
+
+  <img src="images (15).jpeg" alt="my desk">
+
+
+</div>
+<div class="tag1">
+<h5 > Can<span >cer</span></h5>
+
+
+<p class="tag2">Cancer (June 21 - July 22)
+Cancer is a cardinal water sign. Represented by the crab, this oceanic crustacean seamlessly weaves between the sea and shore, representing Cancer’s ability to exist in both emotional and material realms. Cancers are highly intuitive and their psychic abilities manifest in tangible spaces: For instance, Cancers can effortlessly pick up the energies in a room. These crabs are highly sensitive to their environments, as well as extremely self-protective. Much like their celestial spirit animal, Cancers are shielded by hard, external shells. At first, these crabs may be perceived as cold or distant. With time, though, Cancers reveal their gentle nature, genuine compassion, and mystical capabilities. Just don't be surprised if it takes a while to get to know them.</p>
+</div>
+<div class="img1">
+  <img src=" download (6).jpeg" alt="my gig">
+  <img  src=" download (8).jpeg" alt="gig1">
+</div>
+<div class="btn">
+<a id="button" href="#top"> Click here to go up</a>
+</div>
+</body>
+
+</html>
